force-app/main/default/objects/Bundle_Item__c/Bundle_Item__c.object-meta.xml
<CustomObject>
    <description>Junction linking an Evidence_Bundle__c to a Decision_Record__c. Master-detail to the bundle, lookup to the decision, carrying the ledger key for direct reference.</description>
    <label>Bundle Item</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>Bundle Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>