force-app/main/default/objects/Bundle_Item__c/fields/Decision_Record__c.field-meta.xml
<CustomField>
    <fullName>Decision_Record__c</fullName>
    <label>Decision Record</label>
    <description>The decision included in the bundle by this item.</description>
    <inlineHelpText>The decision this bundle item points to.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Decision_Record__c</referenceTo>
    <relationshipLabel>Bundle Items</relationshipLabel>
    <relationshipName>Bundle_Items</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>