force-app/main/default/objects/Bundle_Item__c/fields/Evidence_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Bundle__c</fullName>
    <label>Evidence Bundle</label>
    <description>The bundle this item belongs to.</description>
    <type>MasterDetail</type>
    <referenceTo>Evidence_Bundle__c</referenceTo>
    <relationshipLabel>Bundle Items</relationshipLabel>
    <relationshipName>Bundle_Items</relationshipName>
</CustomField>