force-app/main/default/objects/Bundle_Item__c/fields/Ledger_Key__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Key__c</fullName>
    <label>Ledger Key</label>
    <description>The ledger key of the included decision, denormalized so the bundle references the ledger link directly.</description>
    <inlineHelpText>The Decision_Ledger__b key of the included decision.</inlineHelpText>
    <type>Text</type>
    <length>60</length>
</CustomField>